# mobile-robot-forward-kinematics

./: .gitignore  .gitlab-ci.yml  README.md
diff_drive_gazebo/: package.xml
diff_drive_gazebo/models/diffdrive/: model.config  model.sdf
mecanum_drive_gazebo/: CMakeLists.txt  package.xml
mecanum_drive_gazebo/launch/: main.launch
mecanum_drive_gazebo/models/mecanumdrive/: model.config  model.sdf
omni_drive_gazebo/: CMakeLists.txt  package.xml
omni_drive_gazebo/launch/: main.launch
omni_drive_gazebo/models/omnidrive/: model.config  model.sdf
simulation_control/: CMakeLists.txt  package.xml
simulation_control/launch/: differential_drive.launch  mecanum_omnidrive.launch  threewheel_omnidrive.launch
simulation_control/msg/: InputValues.msg  Wheel.msg
simulation_control/src/: controls.py  motorspeed_sim_diff.py  motorspeed_sim_mecanum.py  motorspeed_sim_omni.py
