<?xml version="1.0"?>
<package>
  <name>diff_drive_gazebo</name>
  <version>1.0.0</version>
  <description>A differential drive mobile robot simulation for VMR purposes</description>

  <maintainer email="fynn.behnke@gmail.com">Fynn Behnke</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
